# work_tools

./: .gitignore  BatchPrinterEnhanced.spec  BatchPrinterGUI.spec  FileMatcherGUI.spec  FilePrefixAdder.spec  FilePrefixAdderGUI.spec  README.md  build_exe.py  build_file_matcher.py  package.json  product.md  pyproject.toml  run_batch_printer.py  run_file_matcher.py  run_file_renamer.py  shortcuts_config.json  使用说明.txt  批量打印工具.spec  批量文件重命名工具.spec  文件名匹配工具.spec
.kiro/steering/: clean-code.md  common.md  product.md  quality-rule.md  structure.md  tech.md
apps/batch_printer/: __init__.py  gui.py
apps/file_matcher/: gui.py  rule_manager.py  rule_settings.py
apps/file_renamer/: __init__.py  gui.py
components/common/: FileTable.vue  HelpModal.vue
components/file-matcher/: RuleEditor.vue
composables/: useDataManager.ts  useErrorHandler.ts  useRenameEngine.ts
entrypoints/file-matcher/: main.ts
scripts/: README_Nuitka.md  build_batch_printer.py  build_file_prefix_adder.py  nuitka_build_all.py  nuitka_build_batch_printer.py  nuitka_build_file_matcher.py  nuitka_build_file_renamer.py  nuitka_builder.py
utils/: exportUtils.ts
work-tools-PySide6/: .gitignore  pyproject.toml  使用说明.txt
work-tools-chrome-plugin/: README.md  wxt.config.ts
work-tools-desktop/: .npmrc  CLAUDE.md  DEBUG.md  MIGRATION_SUMMARY.md  README.md  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  rule-template.xlsx  test.xlsx  tsconfig.json  uno.config.ts  vite.renderer.config.ts  vitest.config.ts
work_tools_plugin/: package-lock.json  package.json  pnpm-lock.yaml
(+132 files in other folders)
