[build-system]
requires = ["uv>=1.0.0", "pyinstaller>=6.0.0"]
build-backend = "uv"

[project]
name = "windows_small_tools"
version = "1.0.0"
description = "Windows小工具集合：文件前缀处理工具、文件名匹配工具和批量打印工具"
authors = [{ name = "荔枝鱼", email = "632795136@qq.com" }]
dependencies = [
  "PyQt5>=5.15.0",
  "pyinstaller>=6.0.0",
  "pandas>=2.0.0",
  "openpyxl>=3.0.0",
  "Pillow>=10.0.0",
  "pywin32>=228",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
file-prefix-tool = "scripts.run_file_prefix_tool:main"
file-matcher-tool = "scripts.run_file_matcher_tool:main"
batch-printer-tool = "src.batch_printer.gui:main"

[tool.pyinstaller]
console-scripts = "file-prefix-tool"
onefile = true
windowed = true
